--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.87.1",
+    "@tanstack/react-query": "^5.90.14",
     "expo": "~54.0.27",
     "expo-apple-authentication": "~8.0.8",
     "expo-auth-session": "~7.0.10",
